--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
 
         <p id="final-text" class="final-text" style="display: none">
-          <strong>Valentine Date:</strong> See you for dinner tonight Sweetie! Love you
+          <strong>Valentine Date:</strong> See you soon for dinner tonight Sweetie! Love you
         </p>
       </div>
     </div>
