Remove '우리' from Valentine date message

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
 
         <p id="final-text" class="final-text" style="display: none">
-          <strong>우리 Valentine Date:</strong> See you soon for dinner tonight Sweetie! 사랑해!&#128536;
+          <strong>Valentine Date:</strong> See you soon for dinner tonight Sweetie! 사랑해!&#128536;
         </p>
       </div>
     </div>
